# condor

./: .dockerignore  .flake8  .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  swarm_deploy.sh
.github/workflows/: linting.yml
condor/: manage.py
condor/catalog/: admin.py  models.py  urls.py  views.py
condor/catalog/management/commands/: check.py  wait_for_db.py
condor/catalog/migrations/: 0001_initial.py
condor/catalog/templates/: base_generic.html  index.html
condor/catalog/templates/catalog/: author_detail.html  author_list.html
condor/condor/: asgi.py  env_settings.py  env_settings.py.ci.py  settings.py  urls.py  wsgi.py
provisioning/: hosts.yml  site.yml
provisioning/host_vars/: main  remote
provisioning/roles/backup/tasks/: main.yml
provisioning/roles/db/handlers/: main.yml
provisioning/roles/db/tasks/: main.yml
provisioning/roles/load_balancing/tasks/: main.yml
provisioning/roles/post_setup/tasks/: main.yml  postgres.yaml
provisioning/roles/setup/tasks/: docker.yml  main.yml
provisioning/roles/web/tasks/: main.yml
provisioning/templates/: bacula-dir.conf  bacula-fd.conf  bacula-sd.conf  bconsole.conf  condor.conf  env_settings.py  haproxy.cfg  main.cf  pg_hba.conf
provisioning/templates/backup_confs/: bacula-dir.conf  bacula-fd.conf  bacula-sd.conf  bconsole.conf  main.cf
