[tool.poetry]
name = "condor"
version = "0.1.0"
description = "DS project 1"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"

[tool.poetry.dev-dependencies]
isort = "^5.4.2"
pre-commit = "^2.7.1"
black = "^20.8b1"
flake8 = "^3.8.3"

[tool.black]
line-length = 119
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
force_grid_wrap = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
